--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "firebase": "^8.0.1",
+    "firebase-admin": "^9.4.0",
     "firebaseui": "^4.7.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
