--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "firebase": "^8.0.1",
     "firebase-admin": "^9.4.0",
+    "firebase-tools": "^8.16.2",
     "firebaseui": "^4.7.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
